--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
@@ -18,31 +18,73 @@
                 <span class="spanFWCZ">品牌</span>
             </div>
             <div class="div_row_right">
-                <div id="divPPText" class="div_select_out SRK" style="position: relative; z-index: 997;">
-                    <div id="divPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input type="hidden" id="PPID" />
-                        <span id="spanPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
+                <div id="divPPText" class="div_select_out SRK" style="position: relative; z-index: 997; width: 450px;">
+                    <div id="divPPSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 450px;">
+                        <span id="spanPP" class="span_select spaninput_fontcolor" style="margin-top: 0; width: 420px;">请选择品牌</span>
                         <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divPP" class="div_bqss" style="display: none;">
-                        <div class="div_bqss_head">
-                            <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
-                            <input class="btn btn-info" type="button" value="快速搜索" />
-                        </div>
-                        <div class="div_bqss_body">
-                            <div class="div_bqss_body_mc" id="div_bqss_body_mc">
-                            </div>
-                            <div class="div_bqss_body_bq" id="div_bqss_body_bq">
-                            </div>
-                        </div>
                     </div>
                 </div>
-                <div id="divCXText" class="div_select_out SRK" style="z-index: 996;">
-                    <div id="divCXSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanCX" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择车系</span>
-                        <div class="span_select_arrow"></div>
+                <div class="div_row_right_jcpp">
+                    <div class="div_row_right_jcpp_item div_row_right_jcpp_first">
+                        <span class="p_row_right_jcpp">请选择品牌</span>
+                        <div class="div_row_right_jcpp_first_left">
+                            <ul class="ul_row_right_jcpp_first_left">
+                                <li class="li_row_right_jcpp_first_left">A</li>
+                                <li class="li_row_right_jcpp_first_left">B</li>
+                                <li class="li_row_right_jcpp_first_left">C</li>
+                                <li class="li_row_right_jcpp_first_left">D</li>
+                                <li class="li_row_right_jcpp_first_left">F</li>
+                            </ul>
+                        </div>
+                        <div class="div_row_right_jcpp_first_right">
+                            <ul class="ul_row_right_jcpp_first_right">
+                                <li class="li_row_right_jcpp_first_right_tag">A</li>
+                                <li class="li_row_right_jcpp_first_right_value">阿尔法-罗密欧</li>
+                                <li class="li_row_right_jcpp_first_right_value">安驰</li>
+                                <li class="li_row_right_jcpp_first_right_value">奥迪</li>
+                                <li class="li_row_right_jcpp_first_right_value">阿斯顿马丁</li>
+                                <li class="li_row_right_jcpp_first_right_tag">B</li>
+                                <li class="li_row_right_jcpp_first_right_value">巴博斯</li>
+                                <li class="li_row_right_jcpp_first_right_value">保斐利</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝骏</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝龙</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝马</li>
+                                <li class="li_row_right_jcpp_first_right_tag">C</li>
+                                <li class="li_row_right_jcpp_first_right_value">巴博斯</li>
+                                <li class="li_row_right_jcpp_first_right_value">保斐利</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝骏</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝龙</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝马</li>
+                                <li class="li_row_right_jcpp_first_right_tag">D</li>
+                                <li class="li_row_right_jcpp_first_right_value">巴博斯</li>
+                                <li class="li_row_right_jcpp_first_right_value">保斐利</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝骏</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝龙</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝马</li>
+                                <li class="li_row_right_jcpp_first_right_tag">E</li>
+                                <li class="li_row_right_jcpp_first_right_value">巴博斯</li>
+                                <li class="li_row_right_jcpp_first_right_value">保斐利</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝骏</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝龙</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝马</li>
+                                <li class="li_row_right_jcpp_first_right_value">巴博斯</li>
+                                <li class="li_row_right_jcpp_first_right_value">保斐利</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝骏</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝龙</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝马</li>
+                                <li class="li_row_right_jcpp_first_right_value">巴博斯</li>
+                                <li class="li_row_right_jcpp_first_right_value">保斐利</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝骏</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝龙</li>
+                                <li class="li_row_right_jcpp_first_right_value">宝马</li>
+                            </ul>
+                        </div>
                     </div>
-                    <div id="divCX" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    <div class="div_row_right_jcpp_item div_row_right_jcpp_second">
+                        <span class="p_row_right_jcpp">请选择车系</span>
+                    </div>
+                    <div class="div_row_right_jcpp_item div_row_right_jcpp_third">
+                        <span class="p_row_right_jcpp">请选择车型</span>
                     </div>
                 </div>
             </div>
